# rsvaliveti.github.io

./: .gitignore  .gitmodules  404.html  Makefile  README_rsv.md  go.mod  index.html  index.json  index.xml  manifest.webmanifest  package.json  pnpm-lock.yaml  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: deploy.yml  publish.yaml
categories/: index.html  index.xml
config/_default/: menus.yaml  module.yaml  params.yaml
content/: _index.md  experience.md
content/authors/: _index.md
content/education/: index.md
content/papers/: index.md
content/patents/: index.md
content/work/: index.md
css/: wowchemy.0e2913271e5b0a8ab4da35ffaf2e8af6.css
data/cv/: cv.yaml
education/: index.html  index.j2
papers/: index.html
patents/: index.html
publication/: index.html  index.xml
publication-type/article-journal/: index.html  index.xml
publication-type/paper-conference/: index.html  index.xml
publication-type/patent/: index.html  index.xml
publication/anand-elastic-nodate/: cite.bib  index.html
publication/anand-extending-2017/: index.html
publication/anand-packet-optical-2019/: cite.bib  index.html
publication/anand-packet-optical-2019-1/: index.html
publication/anand-point-2018/: index.html
publication/anand-reliable-nodate/: index.html
publication/anand-unifying-2017/: index.html
publication/argyropoulos-development-1984/: cite.bib  index.html
publication/argyropoulos-facility-1983/: cite.bib  index.html
publication_types/: index.html  index.xml
tags/: index.html  index.xml
work/: index.html  index.j2
(+279 files in other folders)
